# satisfactory-ai

./: .gitignore  README.md  capture_template.py  config.toml  debug_run.py  docker-compose.yml  pyproject.toml
activities/: game_activities.py
utils/: config.py  exceptions.py  input.py  logger.py  screenshot.py  stats.py  vision.py
workers/: worker.py
workflows/: satisfactory_workflows.py
