[project]
name = "satisfactory-ai"
version = "0.2.0"
description = "Satisfactory AFK bot com orquestração via Temporal"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "mss>=9.0.1",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pydirectinput>=1.0.4",
    "pygetwindow>=0.0.9",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activities", "workflows", "workers", "utils"]
